# jarvis

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pytest.ini  railway.json
.github/workflows/: release.yml  rust-ci.yml  rust-release.yml
dev/: AUDIT-2026-06-08.md  README.md  ROADMAP.md
dev/pathforward/: finalfindings.md  minimax-findings.md
dev/plans/: c2-pair-programming.md  voice-chat.md
docs/: index.html
docs/manual/: 01-architecture.md  02-getting-started.md  03-configuration.md  04-terminal.md  05-tiling.md  06-webview-ipc.md  07-input-palette.md  08-plugins.md  09-networking.md  10-renderer.md  11-ai-assistant.md  12-collaboration.md  README.md  build_html.py  jarvis-manual.html
docs/pathforward/: finalfindings.md
docs/plugins/: plugins.md
jarvis-mobile/: .env.example  .eslintrc.cjs  README.md  app.json  eas.json  jest.config.js  package-lock.json  package.json
jarvis-rs/: Cargo.toml
jarvis-rs/assets/panels/assistant/: index.html
jarvis-rs/assets/panels/chat/: index.html
jarvis-rs/assets/panels/games/: emulator.html
jarvis-rs/assets/panels/pair/: index.html
jarvis-rs/assets/panels/plugins/asteroids/: index.html  plugin.toml
jarvis-rs/assets/panels/plugins/doodlejump/: index.html  plugin.toml
jarvis-rs/assets/panels/plugins/draw/: index.html  plugin.toml
jarvis-rs/assets/panels/plugins/emulator/: plugin.toml
jarvis-rs/assets/panels/plugins/minesweeper/: index.html  plugin.toml
jarvis-rs/assets/panels/plugins/music-player/: api.js  app.js  index.html  player.js  plugin.toml  style.css
jarvis-rs/assets/panels/plugins/pinball/: index.html  plugin.toml
jarvis-rs/assets/panels/plugins/subway/: index.html  plugin.toml
jarvis-rs/assets/panels/plugins/tetris/: index.html  plugin.toml
jarvis-rs/assets/panels/settings/: index.html
jarvis-rs/assets/panels/terminal/: index.html
jarvis-rs/crates/jarvis-ai/: Cargo.toml
jarvis-rs/crates/jarvis-ai/src/: lib.rs  router.rs
jarvis-rs/crates/jarvis-ai/src/claude/: api.rs  client.rs  config.rs
jarvis-rs/crates/jarvis-ai/src/gemini/: api.rs  client.rs  config.rs  mod.rs
jarvis-rs/crates/jarvis-ai/src/openai/: api.rs  client.rs  config.rs  mod.rs
jarvis-rs/crates/jarvis-ai/src/session/: chat.rs  manager.rs  mod.rs  types.rs
jarvis-rs/crates/jarvis-ai/src/tools/: definitions.rs  executor.rs  mod.rs  sandbox.rs  write_exec.rs
jarvis-rs/crates/jarvis-ai/src/voice/: mod.rs
jarvis-rs/crates/jarvis-app/: Cargo.toml
jarvis-rs/crates/jarvis-app/src/: main.rs  updater.rs
jarvis-rs/crates/jarvis-app/src/app_state/: assistant.rs  assistant_task.rs  blanking.rs  core.rs  dispatch.rs  event_handler.rs  init.rs  menu.rs  mod.rs  music_library.rs  pair.rs  palette.rs  polling.rs  resize_drag.rs  social.rs  types.rs  ui_state.rs  voice.rs
jarvis-rs/crates/jarvis-app/src/app_state/pty_bridge/: io.rs  mod.rs  spawn.rs  types.rs
jarvis-rs/crates/jarvis-app/src/app_state/webview_bridge/: assistant_handlers.rs  chat_stream_handlers.rs  crypto_handlers.rs  emulator_handlers.rs  file_handlers.rs  ipc_dispatch.rs  lifecycle.rs  mod.rs  music_handlers.rs  pair_handlers.rs  pty_handlers.rs  pty_polling.rs  settings_handlers.rs  status_bar_handlers.rs
jarvis-rs/crates/jarvis-app/src/app_state/workspace_capture/: linux.rs  macos.rs  mod.rs  windows.rs
jarvis-rs/crates/jarvis-app/src/app_state/ws_server/: crypto_bridge.rs  mobile_polling.rs  mod.rs  pair_protocol.rs  pair_room_client.rs  protocol.rs  relay_client.rs  relay_protocol.rs  startup.rs
jarvis-rs/crates/jarvis-app/src/boot/: sequence.rs  types.rs
jarvis-rs/crates/jarvis-common/src/actions/: action_enum.rs  dispatch.rs
jarvis-rs/crates/jarvis-config/src/: keybinds.rs  lib.rs
jarvis-rs/crates/jarvis-config/src/schema/: assistant.rs  collab.rs  games.rs  keybind_config.rs  mod.rs  plugins.rs  relay.rs  shell.rs  social.rs  startup.rs  voice.rs
jarvis-rs/crates/jarvis-config/src/toml_loader/: mod.rs  plugins.rs  template.rs
jarvis-rs/crates/jarvis-config/src/validation/: layout.rs  misc.rs  mod.rs  tests.rs
jarvis-rs/crates/jarvis-platform/src/: crypto.rs  lib.rs  winit_keys.rs
jarvis-rs/crates/jarvis-platform/src/input/: registry.rs
jarvis-rs/crates/jarvis-platform/src/input_processor/: encoding.rs
jarvis-rs/crates/jarvis-relay/: Cargo.toml  README.md
jarvis-rs/crates/jarvis-relay/src/: connection.rs  main.rs  protocol.rs  rate_limit.rs  room_auth.rs  session.rs
jarvis-rs/crates/jarvis-renderer/src/: lib.rs
jarvis-rs/crates/jarvis-renderer/src/boot_screen/: mod.rs
jarvis-rs/crates/jarvis-renderer/src/command_palette/: mod.rs  palette.rs  types.rs
jarvis-rs/crates/jarvis-renderer/src/render_state/: state.rs
jarvis-rs/crates/jarvis-social/: Cargo.toml
jarvis-rs/crates/jarvis-social/src/: identity.rs  lib.rs  protocol.rs
jarvis-rs/crates/jarvis-social/src/pair/: manager.rs  mod.rs  types.rs
jarvis-rs/crates/jarvis-social/src/presence/: client.rs  event_translator.rs  mod.rs  types.rs
jarvis-rs/crates/jarvis-social/src/realtime/: connection.rs
jarvis-rs/crates/jarvis-social/src/room/: client.rs  mod.rs  protocol.rs  signed_hello.rs
jarvis-rs/crates/jarvis-tiling/src/layout/: borders.rs  calculation.rs
jarvis-rs/crates/jarvis-tiling/src/manager/: focus.rs  operations.rs  types.rs
jarvis-rs/crates/jarvis-tiling/src/tree/: mod.rs  operations.rs
jarvis-rs/crates/jarvis-webview/: Cargo.toml
jarvis-rs/crates/jarvis-webview/src/: content.rs  ipc.rs
jarvis-rs/crates/jarvis-webview/src/manager/: handle.rs  handlers.rs  lifecycle.rs  mod.rs  registry.rs  types.rs
jarvis-rs/plugins/music-player/: .gitignore  api.js  app.js  index.html  queue.js  style.css
jarvis-rs/scripts/: generate-winget-manifests.ps1  package-linux.sh  package-macos.sh  package-windows.ps1
jarvis-rs/testdata/relay/: room_ready.json  session_ready.json
legacy/: config.py  game_event_log.py  main.py  requirements.txt
relay/: Dockerfile  cloudbuild.yaml  deploy.sh
scripts/: login.ps1  login.sh  package.sh  setup.sh  start.sh
tests/: test_config.py
(+114 files in other folders)
