[package]
name = "jarvis-app"
version.workspace = true
edition.workspace = true

[[bin]]
name = "jarvis"
path = "src/main.rs"

[dependencies]
jarvis-ai = { workspace = true }
jarvis-common = { workspace = true }
jarvis-config = { workspace = true }
jarvis-platform = { workspace = true }
jarvis-renderer = { workspace = true }
jarvis-tiling = { workspace = true }
jarvis-social = { workspace = true }
jarvis-webview = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
winit = "0.30"
wry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
pollster = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
portable-pty = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
semver = "1"
base64 = { workspace = true }
dirs = { workspace = true }
rand = { workspace = true }
aes-gcm = { workspace = true }
qrcode = { workspace = true }
urlencoding = "2"
png = "0.17"
muda = "0.15"
image = { version = "0.25", default-features = false, features = ["jpeg"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-graphics = "0.24"

[build-dependencies]
winres = "0.1"
