[package]
name = "jarvis-webview"
version.workspace = true
edition.workspace = true

[dependencies]
jarvis-common = { workspace = true }
wry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
include_dir = "0.7"

[dev-dependencies]
tempfile = "3"
