[package]
name = "jarvis-webview"
version.workspace = true
edition.workspace = true

[dependencies]
jarvis-common = { workspace = true }
wry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
include_dir = "0.7"
toml = { workspace = true }
base64 = { workspace = true }
lofty = { workspace = true }

[dev-dependencies]
tempfile = "3"
